...
    },
    'wfrwj9tb': {
      'en': 'Enter friend\'s username',
      'pl': 'Wprowadź nazwę użytkownika znajomego',
    },
    '83u4je8j': {
      'en': 'Invite',
      'pl': 'Zaproś',
    },
    '69166cpi': {
      'en': 'Members',
      'pl': 'Członkowie',
    },
...
      'pl': 'Dodaj swoją pierwszą listę zakupów',
    },
  },
  // plantSettingsComponent
  {
    'kh5phkc5': {
      'en': 'Manage the plant',
      'pl': 'Zarządzaj rośliną',
    },
  },
  // plantCalendar
  {
    'ht8m2vcu': {
...
