...
              Padding(
                padding: EdgeInsetsDirectional.fromSTEB(24.0, 0.0, 24.0, 12.0),
                child: Column(
                  mainAxisSize: MainAxisSize.max,
                  children: [
                    FFButtonWidget(
                      key: ValueKey('Button_cuvu'),
                      onPressed: () async {
                        HapticFeedback.lightImpact();

                        context.pushNamed(OnboardingSlideshowWidget.routeName);
                      },
                      text: FFLocalizations.of(context).getText(
...
                              hoverColor: Colors.transparent,
                              highlightColor: Colors.transparent,
                              onTap: () async {
                                context.pushNamed(LoginPageWidget.routeName);
                              },
                              child: RichText(
                                key: ValueKey('RichText_039l'),
                                textScaler: MediaQuery.of(context).textScaler,
                                text: TextSpan(
                                  children: [
                                    TextSpan(
                                      text: FFLocalizations.of(context).getText(
                                        '2jy9gos6' /* Already a member?   */,
...
